fix use case and photo alignment

--- a/styles1.css
+++ b/styles1.css
@@ -18,18 +18,19 @@ font-style: oblique;
 	width: 800px;
 	height: 600px;
 	float: right;
-	margin-top: 75px;
+	margin-top: 20px;
 	margin-bottom: 100px;
-	margin-right: 120px;
+	margin-right: 20px;
 }
 
 .userPhoto {
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 	float: left;
-	margin-top: 75px;
-	/*margin-bottom: 100px; */
-	margin-left: 120px;
+	border: groove #968468 2px;
+	padding: 3px;
+	margin: 20px 20px 5px;
+
 }
 
 a {
@@ -49,6 +50,10 @@ footer {
 
 ol {
 	text-align: left;
+}
+
+.foot {
+	font-family: 'Coda', cursive;
 }
 
 
